<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lft.espressointro.MainActivity">

    <TextView
        android:id="@+id/txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_value" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button"
        android:onClick="btnClick"/>

    <TextView
        android:id="@+id/txt_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replace_value"/>

    <TextView
        android:id="@+id/txt_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replace_value" />


</LinearLayout>
