<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".chiuki.list.SimpleListActivity">
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".chiuki.list.SimpleListActivity"/>
    <include
        android:id="@+id/text"
        layout="@android:layout/simple_list_item_1"/>
</LinearLayout>